# KaaL

./: .gitignore  .gitmodules  BUILD.md  BUILD_BOOTABLE_IMAGE.md  BUILD_STATUS.md  BUILD_SYSTEM.md  CMakeLists.txt  COMPONENTS.md  Cargo.toml  Dockerfile  Dockerfile.builder  INTEGRATION_STATUS.md  LICENSE  NEXT_SESSION.md  PHASE1_STATUS.md  QUICKSTART.md  README.md  TODO_CAPABILITY_GRANTING.md  aarch64-sel4.json  bootimage.elf.backup  build-config.toml  build.nu  build.sh  components.toml  debug.lldb  debug.logs  docker-compose.yml  gdb_consumer_debug.gdb  gdb_debug.gdb  qemu-run.logs  qemu_fair_scheduler_test.logs  qemu_fair_scheduler_v2.logs  qemu_final_fair_test.logs  qemu_final_test.logs  qemu_priority0_test.logs  qemu_real_scheduler_fix.logs  qemu_run.logs  qemu_run_ipc_test.logs  qemu_scheduler_fix_test.logs  qemu_sel4_priorities.logs  (+5 more)
.cargo/: config.toml
.claude/: CAPABILITY_GRANTING_SUMMARY.md  CHAPTER_02_STATUS.md  CHAPTER_05_IPC_TEST_LIMITATIONS.md  CHAPTER_05_STATUS.md  CHAPTER_06_STATUS.md  CHAPTER_07_IMPLEMENTATION_PLAN.md  CHAPTER_08_VERIFICATION_OVERVIEW.md  CHAPTER_09_PHASE1_PLAN.md  CHAPTER_09_STATUS.md  COMPONENT_SPAWN_DESIGN.md  CONTEXT_SWITCH_BUG_ANALYSIS.md  FINAL_SESSION_SUMMARY_2025-10-16.md  SESSION_CENTRALIZED_IPC_PLAN.md
.verus/: config.toml
badges/: verification.json
build-system/: README.md
components/ipc-consumer/: Cargo.toml
components/ipc-consumer/src/: main.rs
components/system-init/: Cargo.toml  README.md
components/system-init/src/: main.rs
components/todo-app/: Cargo.toml
components/todo-app/src/: main.rs
docs/: ADVANCED_VERIFICATION.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  BUILD_MODES.md  BUILD_SYSTEM_FIX.md  CAPABILITY_GRANTING_SUMMARY.md  CAPABILITY_REVOCATION.md  COMPONENT_DISCOVERY.md  COMPONENT_SPAWNING.md  (+36 more)
examples/bootable-demo/: CMakeLists.txt  Cargo.toml  README.md
examples/bootable-demo/src/: lib.rs  minimal.rs
examples/echo-server/: Cargo.toml
examples/echo-server/src/: main.rs
examples/ipc-receiver/: Cargo.toml
examples/ipc-receiver/src/: main.rs
examples/minimal-component/: Cargo.toml
examples/minimal-component/src/: main.rs
examples/my-kaal-system/: CMakeLists.txt  Cargo.toml  Dockerfile  README.md
examples/my-kaal-system/.kaal/: config.toml
examples/my-kaal-system/src/: main.rs
examples/my-kaal-system/wrapper/: CMakeLists.txt  kaal_entry.rs  main.c
examples/root-task-example/: Cargo.toml
examples/root-task-example/src/: main.rs
examples/sdk-hello-world/: Cargo.toml
examples/sdk-hello-world/src/: main.rs
examples/system-composition/: Cargo.toml  README.md  build-components.sh  system.xml
examples/system-composition/src/: dddk_drivers.rs  drivers.rs  ipc_demo.rs  main.rs
examples/system-init/: Cargo.toml
examples/system-init/.cargo/: config.toml
examples/system-init/src/: main.rs
kernel/: Cargo.toml  README.md  build-kernel.sh  build.rs  kernel.ld  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: config.rs  lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: context.rs  context_switch.rs  exception.rs  gic.rs  mmu.rs  mod.rs  page_table.rs  registers.rs  uart.rs
kernel/src/boot/: boot_info.rs  bootinfo.rs  dtb.rs  mod.rs  root_task.rs
kernel/src/components/: mod.rs
kernel/src/components/console/: mod.rs  null.rs  pl011.rs
kernel/src/debug/: mod.rs
kernel/src/ipc/: call.rs  cap_transfer.rs  message.rs  mod.rs  operations.rs  test_runner.rs
kernel/src/memory/: address.rs  bitmap.rs  frame_allocator.rs  heap.rs  mod.rs  paging.rs  verified_bitmap.rs
kernel/src/objects/: capability.rs  cdt.rs  cdt_allocator.rs  cnode.rs  cnode_cdt.rs  endpoint.rs  invoke.rs  irq_handler.rs  mod.rs  notification.rs  tcb.rs  test_runner.rs  tests.rs  untyped.rs
kernel/src/scheduler/: mod.rs  timer.rs  types.rs
kernel/src/syscall/: channel.rs  mod.rs  mod.rs.backup2  numbers.rs
kernel/src/verified/: bitmap.rs  bitmap_core.rs  bitmap_prod.rs  bitmap_simple.rs  cap_rights.rs  cap_transfer_ops.rs  capability_ops.rs  cnode_ops.rs  exception_ops.rs  frame_allocator.rs  frame_allocator_ops.rs  invocation_ops.rs  ipc_message_ops.rs  irq_ops.rs  mod.rs  page_frame_number.rs  page_table_ops.rs  phys_addr.rs  pte_ops.rs  scheduler_ops.rs  tcb.rs  thread_queue_ops.rs  tlb_ops.rs  untyped_ops.rs  virt_addr.rs  vspace_ops.rs
runtime/allocator/: Cargo.toml
runtime/cap_broker/: Cargo.toml
runtime/cap_broker/src/: bootinfo.rs  component.rs  irq.rs  lib.rs  mmio.rs  tcb.rs  vspace.rs
runtime/cap_broker/tests/: integration_test.rs
runtime/capability-broker/: Cargo.toml
runtime/capability-broker/src/: boot_info.rs  device_manager.rs  endpoint_manager.rs  lib.rs  memory_manager.rs  service_registry.rs  shmem_registry.rs
runtime/dddk/: Cargo.toml
runtime/dddk/src/: lib.rs
runtime/elfloader/: Cargo.toml  IMPLEMENTATION.md  LINKER_SCRIPT.md  README.md  aarch64-unknown-none-elf.json  build.rs  linker.ld
runtime/elfloader-builder/: Cargo.toml  README.md
runtime/elfloader-builder/src/: elf_loader.rs  main.rs  payload.rs
runtime/elfloader/.cargo/: config.toml
runtime/elfloader/src/: boot.rs  elf.rs  lib.rs  mmu.rs  payload.rs  uart.rs  utils.rs
runtime/elfloader/src/arch/: aarch64.rs  mod.rs
runtime/ipc/: Cargo.toml
runtime/ipc/src/: broker.rs  lib.rs
runtime/kaal-allocator/: Cargo.toml
runtime/kaal-allocator/src/: lib.rs
runtime/memory-manager/: Cargo.toml
runtime/memory-manager/src/: lib.rs
runtime/root-task/: Cargo.toml  README.md  build.rs  components.toml  root-task.ld.generated
runtime/root-task/.cargo/: config.toml
runtime/root-task/src/: allocator.rs  broker_integration.rs  component_loader.rs  elf.rs  elf_xmas.rs  lib.rs  main.rs
runtime/sel4-platform/: Cargo.toml
runtime/sel4-platform/src/: adapter.rs  lib.rs  syscalls.rs
sdk/kaal-sdk/: Cargo.toml
sdk/kaal-sdk/src/: allocator.rs  args.rs  capability.rs  channel_setup.rs  component.rs  elf.rs  lib.rs  memory.rs  message.rs  process.rs  syscall.rs
sdk/kaal-sdk/src/component/: spawn.rs
sdk/kaal-tui/: Cargo.toml
sdk/kaal-tui/src/: lib.rs
(+135 files in other folders)
