[workspace]
members = [
    "runtime/cap_broker",
    "runtime/ipc",
    "runtime/allocator",
    "runtime/dddk",
    "runtime/dddk-runtime",
    "runtime/root-task",
    "runtime/sel4-platform",
    "runtime/sel4-mock",
    "runtime/sel4-rust-mock",
    "components/vfs",
    "components/posix",
    "components/network",
    "components/drivers",
    "tools/sel4-compose",
    "examples/serial-driver",
    "examples/root-task-example",
    "examples/system-composition",
    "examples/minimal-component",
]
# Exclude rust-sel4 submodule - it has platform-specific code (x86 asm) that fails on macOS ARM
# We only use specific crates from it via [workspace.dependencies]
exclude = ["external/rust-sel4"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KaaL Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/kaal"
description = "Kernel-as-a-Library: A composable OS development framework built on seL4"
keywords = ["seL4", "microkernel", "framework", "composable", "capability"]
categories = ["embedded", "no-std", "os"]

[workspace.dependencies]
# seL4 Dual-Mode Integration:
# - Mode 1 (Default): Mock bindings for development/testing on all platforms
# - Mode 2 (Production): Direct Rust seL4 runtime with full syscalls
#
# Switch modes with features:
# - cargo build                                    # Mock mode (default for dev/test)
# - cargo build --no-default-features --features runtime  # Real seL4 runtime
#
# Real seL4 bindings from rust-sel4 project
sel4 = { path = "external/rust-sel4/crates/sel4", default-features = false }
sel4-sys = { path = "external/rust-sel4/crates/sel4/sys" }
sel4-config = { path = "external/rust-sel4/crates/sel4/config" }
sel4-logging = { path = "external/rust-sel4/crates/sel4-logging" }
sel4-shared-ring-buffer = { path = "external/rust-sel4/crates/sel4-shared-ring-buffer" }

# Mock bindings (for testing only - renamed to avoid conflicts)
sel4-mock-sys = { path = "runtime/sel4-mock" }
sel4-mock = { path = "runtime/sel4-rust-mock" }

# Common dependencies
thiserror = "2.0.17"
log = "0.4"
bitflags = "2.4"
static_assertions = "1.1"

# Async/concurrency
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Testing
criterion = "0.7.0"

[workspace.metadata.sel4]
# Dual-mode configuration metadata
# Features are managed by individual crates via sel4-platform
modes = ["runtime", "mock"]
default-mode = "microkit"

# Note: Workspace manifests cannot have [features]
# Individual crates use sel4-platform with features: mock, microkit, runtime

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1

[profile.test]
opt-level = 2
debug = true
