[workspace]
members = [
    # Chapter 9: Runtime Services (native Rust microkernel)
    "runtime/capability-broker",
    "runtime/memory-manager",
]

# Exclude standalone crates with different build targets
exclude = [
    # Bootloaders and kernel (aarch64-unknown-none target)
    "runtime/elfloader",
    "runtime/elfloader-builder",
    "runtime/root-task",
    "runtime/ipc",
    "kernel",

    # SDK (aarch64-unknown-none target)
    "sdk/kaal-sdk",

    # Examples (different targets)
    "examples/bootable-demo",
    "examples/kernel-test",
    "examples/echo-server",
    "examples/ipc-sender",
    "examples/ipc-receiver",
    "examples/sdk-hello-world",
    "examples/sdk-serial-driver",
    "examples/system-init",

    # Archived seL4 integration (reference only)
    "archive/sel4-integration",
    "external/rust-sel4",

    "components/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Damilare Darmie Akinlaja"]
license = "MIT"
repository = "https://github.com/darmie/kaal"
description = "KaaL Framework: Native Rust ARM64 microkernel and runtime services"
keywords = [
    "microkernel",
    "operating-system",
    "arm64",
    "embedded",
    "capability",
]
categories = ["embedded", "no-std", "os"]

[workspace.dependencies]
# No dependencies yet - will add as needed

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1

[profile.test]
opt-level = 2
debug = true
