[package]
name = "kaal-kernel"
version = "0.1.0"
edition = "2021"
authors = ["KaaL Contributors"]
description = "KaaL Rust Microkernel - Pure Rust seL4-compatible microkernel"

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = { version = "2.4", default-features = false }
spin = { version = "0.9", default-features = false }

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization
panic = "abort"          # No unwinding
overflow-checks = true   # Safety checks

[features]
default = ["debug"]
debug = []              # Enable debug printing
