[package]
name = "kaal-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kaal-kernel"
path = "src/main.rs"

[lib]
name = "kaal_kernel"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
bitflags = { version = "2.4", default-features = false }
spin = { version = "0.9", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["log-info", "console-pl011"]

# Logging levels
log-error = []
log-warn = []
log-info = []
log-debug = []
log-trace = []

# Console components (compile-time selection)
console-pl011 = []  # PL011 UART console (default for QEMU virt)
console-null = []   # No console output (production builds)
