[package]
name = "ipc-consumer"
version = "0.1.0"
edition = "2021"

# Empty workspace table to prevent this from being part of parent workspace
[workspace]

[dependencies]
kaal-sdk = { path = "../../sdk/kaal-sdk" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
