[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[workspace]
# Opt out of parent workspace

[[bin]]
name = "todo-app"
path = "src/main.rs"

[dependencies]
kaal-sdk = { path = "../../sdk/kaal-sdk" }
kaal-tui = { path = "../../sdk/kaal-tui" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
