[package]
name = "kaal-bootable-demo"
version = "0.1.0"
edition = "2021"
authors = ["KaaL Team"]
description = "Bootable KaaL demo - Phase 1 with Capability Broker"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
# Phase 1 dependencies will be added once seL4 BootInfo passing is implemented

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = true
