[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo-server"
path = "src/main.rs"

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary
strip = true          # Strip debug symbols
