[package]
name = "ipc-receiver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ipc-receiver"
path = "src/main.rs"

[dependencies]

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary
strip = true          # Strip debug symbols
