[package]
name = "minimal-component"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Only the essentials for a component
kaal-root-task = { path = "../../runtime/root-task" }
cap-broker = { path = "../../runtime/cap_broker" }

[[bin]]
name = "minimal-component"
path = "src/main.rs"
