[package]
name = "cap-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# thiserror only for std builds (not needed for no_std/microkit)
thiserror = { workspace = true, optional = true }
log.workspace = true
bitflags.workspace = true
static_assertions.workspace = true

# seL4 platform abstraction (handles mock/runtime modes)
# NOT used in microkit mode (Microkit has different API constraints)
# Default: mock mode (works on all platforms including macOS ARM)
# For real seL4: use --features runtime
sel4-platform = { path = "../sel4-platform", optional = true, default-features = false }

[dev-dependencies]
criterion.workspace = true

[features]
default = ["std"]
# Standard library support (includes thiserror and mock sel4-platform for testing)
std = ["dep:thiserror", "dep:sel4-platform", "sel4-platform?/mock"]
# Runtime backend - uses seL4 runtime environment with full syscalls
runtime = ["dep:sel4-platform", "sel4-platform/runtime"]
