[package]
name = "kaal-dddk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror.workspace = true

[dev-dependencies]
# For testing proc macros
trybuild = "1.0"
