[package]
name = "kaal-elfloader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Core dependencies for no_std environment
cfg-if = "1.0"
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

# ARM64-specific dependencies
aarch64-cpu = "9.0"

# Device tree parsing
fdt = "0.1"

# Payload deserialization
postcard = { version = "1.0", default-features = false, features = ["use-crc", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# UART driver for debug output
sel4-pl011-driver = { git = "https://github.com/seL4/rust-sel4", optional = true }

[build-dependencies]
cc = "1.0"

[features]
default = ["uart-pl011"]
uart-pl011 = ["sel4-pl011-driver"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
