[package]
name = "kaal-elfloader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = []

[[bin]]
name = "elfloader"
path = "src/lib.rs"

[dependencies]
# Core dependencies for no_std environment
cfg-if = "1.0"
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

# ARM64-specific dependencies
aarch64-cpu = "9.0"

# Device tree parsing
fdt = "0.1"

# Payload deserialization
postcard = { version = "1.0", default-features = false, features = ["use-crc", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[build-dependencies]
cc = "1.0"

[features]
default = []

# Platform-specific DTB location fallbacks (only used if bootloader doesn't provide DTB in x0)
platform-qemu-virt = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
