[package]
name = "kaal-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true
bitflags.workspace = true
static_assertions.workspace = true
crossbeam.workspace = true

# seL4 platform abstraction (mock mode by default)
sel4-platform = { path = "../sel4-platform" }

[dev-dependencies]
criterion.workspace = true
