[package]
name = "kaal-root-task"
version = "0.1.0"
edition = "2021"

# Note: lib.rs has seL4 dependencies and is used for Chapter 9+
# For Chapter 7, we only build the minimal binary (main.rs)
# [lib]
# path = "src/lib.rs"

[[bin]]
name = "root-task"
path = "src/main.rs"

[dependencies]
capability_broker = { package = "kaal-capability-broker", path = "../capability-broker" }
kaal_allocator = { package = "kaal-allocator", path = "../kaal-allocator" }
kaal_ipc = { package = "kaal-ipc", path = "../ipc", features = ["alloc"] }
# ELF parsing in no_std
xmas-elf = { version = "0.9", default-features = false }

[build-dependencies]
toml = "0.8"

[features]
default = ["runtime"]
runtime = []

[profile.release]
opt-level = 1         # Reduce optimization for better debugging
lto = false           # Disable LTO for faster builds and better debugging
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary
strip = false         # Keep debug symbols for better debugging
