[package]
name = "kaal-tui"
version = "0.1.0"
edition = "2021"

[workspace]
# Opt out of parent workspace

[lib]
name = "kaal_tui"
path = "src/lib.rs"

[dependencies]
kaal-sdk = { path = "../kaal-sdk" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
